# maple-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  shell.nix
src/: App.cpp  App.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  World.cpp  World.h
src/ECS/: Component.h  Entity.cpp  Entity.h
src/ECS/Components/: BehaviourScript.h  BoxCollider.h  BoxRenderer.cpp  BoxRenderer.h  Gravity.cpp  Gravity.h  MouseFollow.cpp  MouseFollow.h  MousePosition.cpp  MousePosition.h  PlayerInput.cpp  PlayerInput.h  RigidBody.cpp  RigidBody.h  Shader.cpp  Shader.h  SphereRenderer.cpp  SphereRenderer.h  UserInput.cpp  UserInput.h
src/Log/: msg.h
src/Scripts/: MouseFollow.h  TestScript.h
src/Shaders/: test.shader
src/entrypoint/: main.cpp
src/structs/: cursor.h
